# minimal_proto_max_external

./: CMakeLists.txt  CMakePresets.json  README.md  getlibs.py  lib_files_list.txt
libraries/protobuf/: CMakeLists.txt  CMakePresets.json
